--- a/scrape/CorrelationCalculation.ipynb
+++ b/scrape/CorrelationCalculation.ipynb
@@ -241,7 +241,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_correlations = pd.DataFrame(all_merge.groupby('name').apply(lambda x: calculate_correlation(x))).reset_index()\n",
+    "\n",
+    "df_correlations.columns = ['name', 'correlation']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +277,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>name</th>\n",
-       "      <th>0</th>\n",
+       "      <th>correlation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -400,281 +411,42 @@
        "</div>"
       ],
       "text/plain": [
-       "                           name         0\n",
-       "0           Christian Fassnacht  0.806650\n",
-       "1   Christopher Martins Pereira  0.794686\n",
-       "2                Cédric Zesiger  0.752546\n",
-       "3                 Dario Marzino  0.794686\n",
-       "4            David Von Ballmoos  0.752546\n",
-       "5              Esteban Petignat  0.794686\n",
-       "6           Fabian Lustenberger  0.752546\n",
-       "7                Felix Mambimbi  0.794686\n",
-       "8             Frederik Sörensen  0.752546\n",
-       "9              Gianluca Gaudino  0.752546\n",
-       "10             Guillaume Hoarau  0.752546\n",
-       "11            Jean-Pierre Nsame  0.752546\n",
-       "12               Jordan Lotomba  0.752546\n",
-       "13                 Marco Wölfli  0.752546\n",
-       "14             Marvin Spielmann  0.752546\n",
-       "15             Michel Aebischer  0.752546\n",
-       "16            Miralem Sulejmani  0.179934\n",
-       "17           Mohamed Ali Camara  0.752546\n",
-       "18                Nicolas Bürgy  0.179934\n",
-       "19       Nicolas Moumi Ngamaleu  0.752546\n",
-       "20                 Roger Assalé  0.179934\n",
-       "21                  Saidy Janko  0.752546\n",
-       "22                Sandro Lauper  0.752546\n",
-       "23               Ulisses Garcia  0.752546\n",
-       "24               Vincent Sierro  0.752546"
+       "                           name  correlation\n",
+       "0           Christian Fassnacht     0.806650\n",
+       "1   Christopher Martins Pereira     0.794686\n",
+       "2                Cédric Zesiger     0.752546\n",
+       "3                 Dario Marzino     0.794686\n",
+       "4            David Von Ballmoos     0.752546\n",
+       "5              Esteban Petignat     0.794686\n",
+       "6           Fabian Lustenberger     0.752546\n",
+       "7                Felix Mambimbi     0.794686\n",
+       "8             Frederik Sörensen     0.752546\n",
+       "9              Gianluca Gaudino     0.752546\n",
+       "10             Guillaume Hoarau     0.752546\n",
+       "11            Jean-Pierre Nsame     0.752546\n",
+       "12               Jordan Lotomba     0.752546\n",
+       "13                 Marco Wölfli     0.752546\n",
+       "14             Marvin Spielmann     0.752546\n",
+       "15             Michel Aebischer     0.752546\n",
+       "16            Miralem Sulejmani     0.179934\n",
+       "17           Mohamed Ali Camara     0.752546\n",
+       "18                Nicolas Bürgy     0.179934\n",
+       "19       Nicolas Moumi Ngamaleu     0.752546\n",
+       "20                 Roger Assalé     0.179934\n",
+       "21                  Saidy Janko     0.752546\n",
+       "22                Sandro Lauper     0.752546\n",
+       "23               Ulisses Garcia     0.752546\n",
+       "24               Vincent Sierro     0.752546"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(all_merge.groupby('name').apply(lambda x: calculate_correlation(x))).reset_index()"
+    "df_correlations"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>date</th>\n",
-       "      <th>note</th>\n",
-       "      <th>likes</th>\n",
-       "      <th>note_norm</th>\n",
-       "      <th>likes_norm</th>\n",
-       "      <th>fame</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Christian Fassnacht</td>\n",
-       "      <td>2017-08-20</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1039.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.217676</td>\n",
-       "      <td>0.835353</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Christian Fassnacht</td>\n",
-       "      <td>2017-08-27</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1039.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.217676</td>\n",
-       "      <td>0.835353</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Christian Fassnacht</td>\n",
-       "      <td>2017-09-03</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1029.0</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.215054</td>\n",
-       "      <td>1.030108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Christian Fassnacht</td>\n",
-       "      <td>2017-09-10</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1029.0</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.215054</td>\n",
-       "      <td>1.030108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Christian Fassnacht</td>\n",
-       "      <td>2017-09-17</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>1010.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.210071</td>\n",
-       "      <td>1.420142</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6572</th>\n",
-       "      <td>Vincent Sierro</td>\n",
-       "      <td>2017-07-23</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>992.0</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.205350</td>\n",
-       "      <td>1.010700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6573</th>\n",
-       "      <td>Vincent Sierro</td>\n",
-       "      <td>2017-07-30</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1131.0</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.241804</td>\n",
-       "      <td>1.083609</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6574</th>\n",
-       "      <td>Vincent Sierro</td>\n",
-       "      <td>2017-08-06</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1251.0</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.273276</td>\n",
-       "      <td>1.146551</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6575</th>\n",
-       "      <td>Vincent Sierro</td>\n",
-       "      <td>2017-08-13</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1039.0</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.217676</td>\n",
-       "      <td>1.035353</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6576</th>\n",
-       "      <td>Vincent Sierro</td>\n",
-       "      <td>2019-11-17</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>832.0</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.163388</td>\n",
-       "      <td>0.926777</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6577 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     name        date  note   likes  note_norm  likes_norm  \\\n",
-       "0     Christian Fassnacht  2017-08-20   4.0  1039.0        0.4    0.217676   \n",
-       "1     Christian Fassnacht  2017-08-27   4.0  1039.0        0.4    0.217676   \n",
-       "2     Christian Fassnacht  2017-09-03   4.5  1029.0        0.6    0.215054   \n",
-       "3     Christian Fassnacht  2017-09-10   4.5  1029.0        0.6    0.215054   \n",
-       "4     Christian Fassnacht  2017-09-17   5.5  1010.0        1.0    0.210071   \n",
-       "...                   ...         ...   ...     ...        ...         ...   \n",
-       "6572       Vincent Sierro  2017-07-23   4.5   992.0        0.6    0.205350   \n",
-       "6573       Vincent Sierro  2017-07-30   4.5  1131.0        0.6    0.241804   \n",
-       "6574       Vincent Sierro  2017-08-06   4.5  1251.0        0.6    0.273276   \n",
-       "6575       Vincent Sierro  2017-08-13   4.5  1039.0        0.6    0.217676   \n",
-       "6576       Vincent Sierro  2019-11-17   4.5   832.0        0.6    0.163388   \n",
-       "\n",
-       "          fame  \n",
-       "0     0.835353  \n",
-       "1     0.835353  \n",
-       "2     1.030108  \n",
-       "3     1.030108  \n",
-       "4     1.420142  \n",
-       "...        ...  \n",
-       "6572  1.010700  \n",
-       "6573  1.083609  \n",
-       "6574  1.146551  \n",
-       "6575  1.035353  \n",
-       "6576  0.926777  \n",
-       "\n",
-       "[6577 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_fame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -685,24 +457,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_performance' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-41e959dbccee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_performance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m'../data/df_dynamic_performance_merged.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf_fame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m'../data/df_dynamic_fame_merged.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df_performance' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_performance.to_csv( '../data/df_dynamic_performance_merged.csv', index=False)\n",
-    "df_fame.to_csv( '../data/df_dynamic_fame_merged.csv', index=False)"
+    "df_correlations.to_csv( '../data/df_correlations.csv', index=False)"
    ]
   },
   {
