everything fixed by maisterdeif

--- a/scrape/CorrelationCalculation.ipynb
+++ b/scrape/CorrelationCalculation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,206 +31,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>date</th>\n",
-       "      <th>score</th>\n",
-       "      <th>market_value</th>\n",
-       "      <th>market_value_norm</th>\n",
-       "      <th>score_norm</th>\n",
-       "      <th>performance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Christian Fassnacht</td>\n",
-       "      <td>2011-02-13</td>\n",
-       "      <td>0</td>\n",
-       "      <td>110000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Christian Fassnacht</td>\n",
-       "      <td>2011-02-20</td>\n",
-       "      <td>0</td>\n",
-       "      <td>110000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Christian Fassnacht</td>\n",
-       "      <td>2011-02-27</td>\n",
-       "      <td>0</td>\n",
-       "      <td>110000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Christian Fassnacht</td>\n",
-       "      <td>2011-03-06</td>\n",
-       "      <td>0</td>\n",
-       "      <td>110000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Christian Fassnacht</td>\n",
-       "      <td>2011-03-13</td>\n",
-       "      <td>0</td>\n",
-       "      <td>110000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11520</th>\n",
-       "      <td>Vincent Sierro</td>\n",
-       "      <td>2019-11-10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5500000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11521</th>\n",
-       "      <td>Vincent Sierro</td>\n",
-       "      <td>2019-11-17</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5500000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11522</th>\n",
-       "      <td>Vincent Sierro</td>\n",
-       "      <td>2019-11-24</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5500000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11523</th>\n",
-       "      <td>Vincent Sierro</td>\n",
-       "      <td>2019-12-01</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5500000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.266667</td>\n",
-       "      <td>1.266667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11524</th>\n",
-       "      <td>Vincent Sierro</td>\n",
-       "      <td>2019-12-08</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5500000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.266667</td>\n",
-       "      <td>1.266667</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>11525 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      name        date  score  market_value  \\\n",
-       "0      Christian Fassnacht  2011-02-13      0      110000.0   \n",
-       "1      Christian Fassnacht  2011-02-20      0      110000.0   \n",
-       "2      Christian Fassnacht  2011-02-27      0      110000.0   \n",
-       "3      Christian Fassnacht  2011-03-06      0      110000.0   \n",
-       "4      Christian Fassnacht  2011-03-13      0      110000.0   \n",
-       "...                    ...         ...    ...           ...   \n",
-       "11520       Vincent Sierro  2019-11-10      0     5500000.0   \n",
-       "11521       Vincent Sierro  2019-11-17      0     5500000.0   \n",
-       "11522       Vincent Sierro  2019-11-24      0     5500000.0   \n",
-       "11523       Vincent Sierro  2019-12-01      4     5500000.0   \n",
-       "11524       Vincent Sierro  2019-12-08      4     5500000.0   \n",
-       "\n",
-       "       market_value_norm  score_norm  performance  \n",
-       "0                    0.0    0.000000     0.000000  \n",
-       "1                    0.0    0.000000     0.000000  \n",
-       "2                    0.0    0.000000     0.000000  \n",
-       "3                    0.0    0.000000     0.000000  \n",
-       "4                    0.0    0.000000     0.000000  \n",
-       "...                  ...         ...          ...  \n",
-       "11520                1.0    0.000000     1.000000  \n",
-       "11521                1.0    0.000000     1.000000  \n",
-       "11522                1.0    0.000000     1.000000  \n",
-       "11523                1.0    0.266667     1.266667  \n",
-       "11524                1.0    0.266667     1.266667  \n",
-       "\n",
-       "[11525 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_performance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_merge = pd.merge(df_fame, df_performance,  how='left', left_on=['name','date'], right_on = ['name','date'])"
+    "df_performance = df_performance.drop_duplicates(subset=[\"name\", \"score\", \"market_value\", \"score_norm\", \"performance\"])\n",
+    "df_fame = df_fame.drop_duplicates(subset=[\"name\", \"note\", \"likes\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_merge = pd.merge(df_fame, df_performance,  how='right', left_on=['name','date'], right_on = ['name','date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -282,129 +109,129 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Christian Fassnacht</td>\n",
-       "      <td>0.806650</td>\n",
+       "      <td>0.486808</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Christopher Martins Pereira</td>\n",
-       "      <td>0.794686</td>\n",
+       "      <td>0.669760</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Cédric Zesiger</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Dario Marzino</td>\n",
-       "      <td>0.794686</td>\n",
+       "      <td>0.669760</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>David Von Ballmoos</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>Esteban Petignat</td>\n",
-       "      <td>0.794686</td>\n",
+       "      <td>0.669760</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <td>6</td>\n",
        "      <td>Fabian Lustenberger</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <td>7</td>\n",
        "      <td>Felix Mambimbi</td>\n",
-       "      <td>0.794686</td>\n",
+       "      <td>0.669760</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <td>8</td>\n",
        "      <td>Frederik Sörensen</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <td>9</td>\n",
        "      <td>Gianluca Gaudino</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <td>10</td>\n",
        "      <td>Guillaume Hoarau</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <td>11</td>\n",
        "      <td>Jean-Pierre Nsame</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <td>12</td>\n",
        "      <td>Jordan Lotomba</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <td>13</td>\n",
        "      <td>Marco Wölfli</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <td>14</td>\n",
        "      <td>Marvin Spielmann</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <td>15</td>\n",
        "      <td>Michel Aebischer</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <td>16</td>\n",
        "      <td>Miralem Sulejmani</td>\n",
-       "      <td>0.179934</td>\n",
+       "      <td>0.611756</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <td>17</td>\n",
        "      <td>Mohamed Ali Camara</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <td>18</td>\n",
        "      <td>Nicolas Bürgy</td>\n",
-       "      <td>0.179934</td>\n",
+       "      <td>0.611756</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <td>19</td>\n",
        "      <td>Nicolas Moumi Ngamaleu</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <td>20</td>\n",
        "      <td>Roger Assalé</td>\n",
-       "      <td>0.179934</td>\n",
+       "      <td>0.611756</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <td>21</td>\n",
        "      <td>Saidy Janko</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
+       "      <td>22</td>\n",
        "      <td>Sandro Lauper</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <td>23</td>\n",
        "      <td>Ulisses Garcia</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
+       "      <td>24</td>\n",
        "      <td>Vincent Sierro</td>\n",
-       "      <td>0.752546</td>\n",
+       "      <td>0.500795</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -412,34 +239,34 @@
       ],
       "text/plain": [
        "                           name  correlation\n",
-       "0           Christian Fassnacht     0.806650\n",
-       "1   Christopher Martins Pereira     0.794686\n",
-       "2                Cédric Zesiger     0.752546\n",
-       "3                 Dario Marzino     0.794686\n",
-       "4            David Von Ballmoos     0.752546\n",
-       "5              Esteban Petignat     0.794686\n",
-       "6           Fabian Lustenberger     0.752546\n",
-       "7                Felix Mambimbi     0.794686\n",
-       "8             Frederik Sörensen     0.752546\n",
-       "9              Gianluca Gaudino     0.752546\n",
-       "10             Guillaume Hoarau     0.752546\n",
-       "11            Jean-Pierre Nsame     0.752546\n",
-       "12               Jordan Lotomba     0.752546\n",
-       "13                 Marco Wölfli     0.752546\n",
-       "14             Marvin Spielmann     0.752546\n",
-       "15             Michel Aebischer     0.752546\n",
-       "16            Miralem Sulejmani     0.179934\n",
-       "17           Mohamed Ali Camara     0.752546\n",
-       "18                Nicolas Bürgy     0.179934\n",
-       "19       Nicolas Moumi Ngamaleu     0.752546\n",
-       "20                 Roger Assalé     0.179934\n",
-       "21                  Saidy Janko     0.752546\n",
-       "22                Sandro Lauper     0.752546\n",
-       "23               Ulisses Garcia     0.752546\n",
-       "24               Vincent Sierro     0.752546"
+       "0           Christian Fassnacht     0.486808\n",
+       "1   Christopher Martins Pereira     0.669760\n",
+       "2                Cédric Zesiger     0.500795\n",
+       "3                 Dario Marzino     0.669760\n",
+       "4            David Von Ballmoos     0.500795\n",
+       "5              Esteban Petignat     0.669760\n",
+       "6           Fabian Lustenberger     0.500795\n",
+       "7                Felix Mambimbi     0.669760\n",
+       "8             Frederik Sörensen     0.500795\n",
+       "9              Gianluca Gaudino     0.500795\n",
+       "10             Guillaume Hoarau     0.500795\n",
+       "11            Jean-Pierre Nsame     0.500795\n",
+       "12               Jordan Lotomba     0.500795\n",
+       "13                 Marco Wölfli     0.500795\n",
+       "14             Marvin Spielmann     0.500795\n",
+       "15             Michel Aebischer     0.500795\n",
+       "16            Miralem Sulejmani     0.611756\n",
+       "17           Mohamed Ali Camara     0.500795\n",
+       "18                Nicolas Bürgy     0.611756\n",
+       "19       Nicolas Moumi Ngamaleu     0.500795\n",
+       "20                 Roger Assalé     0.611756\n",
+       "21                  Saidy Janko     0.500795\n",
+       "22                Sandro Lauper     0.500795\n",
+       "23               Ulisses Garcia     0.500795\n",
+       "24               Vincent Sierro     0.500795"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,9 +315,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
