--- a/scrape/DynamicMerge.ipynb
+++ b/scrape/DynamicMerge.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 151,
    "metadata": {
     "scrolled": true
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,20 +94,28 @@
     "    #print(df_player['date'].min())\n",
     "    #display(df_player.sort_values('date'))\n",
     "    #display(df_player)\n",
-    "    df_player.drop_duplicates(subset=['date'], keep='first', inplace=True)\n",
-    "    df_player = df_player.set_index('date')\n",
+    "    df_player_ = df_player.drop_duplicates(subset=['date'], keep='first')\n",
+    "    df_player = df_player_.set_index('date')\n",
     "    resampled = df_player.resample('W').fillna('nearest')\n",
     "    resampled = resampled.drop('name', axis=1)\n",
     "    return resampled.reset_index()"
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "df_noten.groupby('name').apply(lambda x: x.drop_duplicates(subset=[\"date\"]).set_index('date').resample('W').fillna('nearest').drop('name', axis=1)).reset_index()['note'].plot()"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_dream_res = df_dream.groupby('name').apply(lambda x:resample_player(x))\n",
+    "\n",
     "df_noten_res = df_noten.groupby('name').apply(lambda x:resample_player(x))\n",
     "df_transfer_res = df_transfer.groupby('name').apply(lambda x:resample_player(x))\n",
     "df_insta_likes_res = df_insta_likes.groupby('name').apply(lambda x:resample_player(x))\n",
@@ -119,8 +127,15 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "df_transfer_res['market_value'].plot()"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 183,
    "metadata": {
     "scrolled": true
    },
@@ -136,6 +151,27 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "df_noten.groupby('name').apply(lambda x:resample_player(x)).reset_index()['note'].plot()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "df_noten.groupby('name').apply(lambda x: x.set_index('date').resample('W').fillna('nearest'))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "df_transfer.groupby('name').count()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -144,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,13 +203,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_fame['fame'] = df_fame['note_norm'] + 2* df_fame['likes_norm'] \n",
+    "df_fame['fame'] = df_fame['note_norm']*1.5 + df_fame['likes_norm']\n",
     "df_performance['performance'] = df_performance['market_value_norm'] + df_performance['score_norm'] "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -184,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,9 +259,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
